# Certificats_Openclassrooms

./: .gitignore
Analysez_vos_données_textuelles/: entrees.py  main.py
Analysez_vos_données_textuelles/Récupérez_et_explorez_le_corpus_de_textes/: main.py
Analysez_vos_données_textuelles/create_csv/: gen_csv.py  main.py
Brouillon/ML/virtual_env/: Dockerfile
Brouillon/NoSQL/Client_docker/: Dockerfile
Brouillon/NoSQL/client_rust/: Cargo.toml
Brouillon/NoSQL/client_rust/src/: main.rs
Brouillon/NoSQL/kubernetes/: client.yaml  serveur.yaml
Classez_et_segmentez_des_données_visuelles/: main.cpp
Classez_et_segmentez_des_données_visuelles/tests/: ajouts.cpp  ajouts.h  modifications.cpp  modifications.h  suppressions.cpp  suppressions.h
Maitrisez_les_bases_de_donnees_NoSQL/Client/: Dockerfile
Maitrisez_les_bases_de_donnees_NoSQL/MongoDB/: Dockerfile
Maitrisez_les_bases_de_donnees_NoSQL/kubernetes/: client.yaml  namespace.yaml  serveur.yaml
Requêtez_une_base_de_données_avec_SQL/: main.py
Requêtez_une_base_de_données_avec_SQL/tables/: insertion.py  manipulation.py  visualisation.py
